Updated: ci reports

--- a/reports/index.html
+++ b/reports/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
 <a href="./unit/report.html">Unit Report</a>
-<a href="./loki/report.html">Screenshot Report</a>
+<a href=".loki/report.html">Screenshot Report</a>
 </body>
 </html>
